--- a/index.html
+++ b/index.html
@@ -69,12 +69,13 @@
                 </div>
             </div>
         </div>
-	<ins class="kakao_ad_area" style="display:none;" 
+	<div class = "ad-banner">    
+		<ins class="kakao_ad_area" style="display:none;" 
  data-ad-unit    = "DAN-wP916UZLIHkEVUmJ" 
  data-ad-width   = "320" 
  data-ad-height  = "100"></ins> 
 <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-
+	    </div>
        
 		<!-- Optional JavaScript; choose one of the two! -->
 
