--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
  data-ad-width   = "320" 
  data-ad-height  = "100"></ins> 
 <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+		<ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-AnFV0cc6Kan6wK2k" 
+ data-ad-width   = "320" 
+ data-ad-height  = "100"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 	    </div>
        
 		<!-- Optional JavaScript; choose one of the two! -->
