--- a/index.html
+++ b/index.html
@@ -75,13 +75,16 @@
  data-ad-width   = "320" 
  data-ad-height  = "100"></ins> 
 <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-		<ins class="kakao_ad_area" style="display:none;" 
+		
+	    </div>
+	    
+	 <div class = "ad-banner2"> 
+	    <ins class="kakao_ad_area" style="display:none;" 
  data-ad-unit    = "DAN-AnFV0cc6Kan6wK2k" 
  data-ad-width   = "320" 
  data-ad-height  = "100"></ins> 
 <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-	    </div>
-       
+        </div>
 		<!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
