--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 	<!-- Go to www.addthis.com/dashboard to customize your tools -->
 	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-602f97d61767fae0">		</script>
-
+	
+	<meta name="naver-site-verification" content="65d333587d1b32c3586514fdfec7b0d80cb42a6b" />
 
     </head>
     <body>
