--- a/index.html
+++ b/index.html
@@ -182,39 +182,39 @@
 						switch(prediction[0].className) {
   							case "beng":
 							resultimg = '<img src="beng.jpg"></img>';
-    							resultMessege = "당신은 벵갈이군요! 표범과 닮은 신비한 무늬로 유명한 품종이죠. 당신도 혹시 야성적인 외모로 가는 장소마다 주변의 관심을 한 몸에 받고 있지는 않나요? 아니었다고 해도 조금만 기다려보세요! 당신의 매력을 알아본 누군가가 곧 적극적인 구애를 펼칠 거예요! <br> <br> 벵갈은 야생 삵과의 교배로 태어난 종인 만큼 왕성한 체력과 활동력도 자랑한답니다. 얌전히 앉아 있는 것보다는 새로운 시도를 하는 걸 즐기는 당신! 다가오는 휴일에는 근처 유기 동물 보호소를 찾아 봉사 활동에 도전해보는 건 어떨까요?"
+    							resultMessege = "당신은 벵갈이군요! 표범과 닮은 신비한 무늬로 유명한 품종이죠. 당신도 혹시 야성적인 외모로 가는 장소마다 주변의 관심을 한 몸에 받고 있지는 않나요? 아니었다고 해도 조금만 기다려보세요! 당신의 매력을 알아본 누군가가 곧 적극적인 구애를 펼칠 거예요! <br> <br> 벵갈은 야생 삵과의 교배로 태어난 종인 만큼 왕성한 체력과 활동력도 자랑한답니다. 얌전히 앉아 있는 것보다는 새로운 시도를 하는 걸 즐기는 당신! 다가오는 휴일에는 근처 유기 동물 보호소를 찾아 봉사 활동에 도전해보는 건 어떨까요?";
     							break;
   							case "brits":
 							resultimg = '<img src="brits.jpg"></img>';
-    							resultMessege = "당신은 브리티시 숏헤어입니다! 동그랗게 생긴 얼굴형이 특징이죠. 보고만 있어도 마음을 편하게 해줘 당신 주변에는 항상 고민을 상담하는 친구들이 끊이지 않겠네요. 물렁해 보이는 첫 인상과 달리 튼튼한 뼈를 갖고 있어 반전 매력도 갖췄죠! <br> <br> 둥글둥글한 인상처럼 얌전한 성격인 경우가 많아 영국 신사라는 별명도 붙은 브리티시 숏헤어. 하지만 가만히 있는 걸 너무 좋아하다가는 몸이 찌뿌둥해질 수 있으니 주기적인 운동은 필수겠죠! 밖에 나가는 게 귀찮다면 고양이가 좋아하는 낚시대로 사냥 놀이를 즐겨보세요! (하지만 나만 고양이가 없지)"
+    							resultMessege = "당신은 브리티시 숏헤어입니다! 동그랗게 생긴 얼굴형이 특징이죠. 보고만 있어도 마음을 편하게 해줘 당신 주변에는 항상 고민을 상담하는 친구들이 끊이지 않겠네요. 물렁해 보이는 첫 인상과 달리 튼튼한 뼈를 갖고 있어 반전 매력도 갖췄죠! <br> <br> 둥글둥글한 인상처럼 얌전한 성격인 경우가 많아 영국 신사라는 별명도 붙은 브리티시 숏헤어. 하지만 가만히 있는 걸 너무 좋아하다가는 몸이 찌뿌둥해질 수 있으니 주기적인 운동은 필수겠죠! 밖에 나가는 게 귀찮다면 고양이가 좋아하는 낚시대로 사냥 놀이를 즐겨보세요! (하지만 나만 고양이가 없지)";
     							break;
 							case "ko":
 							resultimg = '<img src="ko.jpg"></img>';
-    							resultMessege = "당신은 코리안 숏헤어를 닮았군요! 혹시 김치볶음밥에 반찬을 김치로 먹으면서, 라면을 끓이면 꼭 김치를 곁들이고, 집에는 김치 냉장고가 따로 있나요? 게다가 카페 테이블에 있는 남의 물건은 절대 훔쳐가지 않지만 그 자리만은 탐난다면, 당신은 영락없는 대한민국 토종! <br> <br> 한국에 다양한 사람들이 모여 사는 것처럼 그 색깔과 무늬와 성격도 가지각색인 코리안 숏헤어! 공인인증서를 참을 수 없을 만큼 숨가쁜 일상을 지내고 있다면, 가끔은 우연히 마주친 길냥이에게 츄르를 선물하는 여유를 가져보는 건 어떨까요?"
+    							resultMessege = "당신은 코리안 숏헤어를 닮았군요! 혹시 김치볶음밥에 반찬을 김치로 먹으면서, 라면을 끓이면 꼭 김치를 곁들이고, 집에는 김치 냉장고가 따로 있나요? 게다가 카페 테이블에 있는 남의 물건은 절대 훔쳐가지 않지만 그 자리만은 탐난다면, 당신은 영락없는 대한민국 토종! <br> <br> 한국에 다양한 사람들이 모여 사는 것처럼 그 색깔과 무늬와 성격도 가지각색인 코리안 숏헤어! 공인인증서를 참을 수 없을 만큼 숨가쁜 일상을 지내고 있다면, 가끔은 우연히 마주친 길냥이에게 츄르를 선물하는 여유를 가져보는 건 어떨까요?";
     							break;
 							ase "per":
 							resultimg = '<img src="per.jpg"></img>';
-    							resultMessege = "당신은 페르시안 고양이입니다! 긴 털 고양이의 대표주자인 페르시안처럼 당신도 풍성한 머리숱의 소유자인가요? 이 사이트의 개발자는 요즘 머리가 엄청 빠지고 있는데... 부럽네요. <br> <br> 퍼그처럼 생긴 개성 있는 얼굴 때문에 영화나 드라마 속 악당들의 파트너로 자주 등장하는 페르시안이지만, 실제로는 굉장히 조용한 순둥이인 경우가 많다고 해요! 겉모습만 보고 판단하면 안 되는 건 사람뿐만이 아닌가 봐요. 오늘은 그동안 오해했던 누군가에게 먼저 연락해서 좀 더 가까워져 보는 건 어떨까요? 페르시안의 털을 쓰다듬는 것처럼 마음이 따뜻해질 거예요!"
+    							resultMessege = "당신은 페르시안 고양이입니다! 긴 털 고양이의 대표주자인 페르시안처럼 당신도 풍성한 머리숱의 소유자인가요? 이 사이트의 개발자는 요즘 머리가 엄청 빠지고 있는데... 부럽네요. <br> <br> 퍼그처럼 생긴 개성 있는 얼굴 때문에 영화나 드라마 속 악당들의 파트너로 자주 등장하는 페르시안이지만, 실제로는 굉장히 조용한 순둥이인 경우가 많다고 해요! 겉모습만 보고 판단하면 안 되는 건 사람뿐만이 아닌가 봐요. 오늘은 그동안 오해했던 누군가에게 먼저 연락해서 좀 더 가까워져 보는 건 어떨까요? 페르시안의 털을 쓰다듬는 것처럼 마음이 따뜻해질 거예요!";
     							break;
 							case "scot":
 							resultimg = '<img src="scot.jpg"></img>';
-    							resultMessege = "당신은 스코티시 폴드를 닮았네요! ‘폴드’는 접혔다는 뜻으로 귀가 접혀 있는 이 품종의 특징을 담아낸 이름이죠. 살포시 접힌 귀에 동그란 얼굴과 큰 눈, 짤따란 목까지 더해져서 매력적인 외형을 자랑한답니다. 당신도 어딜 가나 귀여움을 독차지하는 그런 스타일이겠는걸요? <br> <br> 하지만 이렇게 사랑스러운 스코티시 폴드에게도 슬픈 사연은 있는데요, 인기가 너무 많은 나머지 인위적인 교배가 지나치게 이뤄져서 아픈 아이들이 많다고 해요. 혹시 반려묘와 함께 하는 걸 고민하고 계시다면, 인기 품종을 사는 것보다는 입양을 고려해보시는 건 어떤가요? 무엇보다 중요한 건 마음이잖아요!"
+    							resultMessege = "당신은 스코티시 폴드를 닮았네요! ‘폴드’는 접혔다는 뜻으로 귀가 접혀 있는 이 품종의 특징을 담아낸 이름이죠. 살포시 접힌 귀에 동그란 얼굴과 큰 눈, 짤따란 목까지 더해져서 매력적인 외형을 자랑한답니다. 당신도 어딜 가나 귀여움을 독차지하는 그런 스타일이겠는걸요? <br> <br> 하지만 이렇게 사랑스러운 스코티시 폴드에게도 슬픈 사연은 있는데요, 인기가 너무 많은 나머지 인위적인 교배가 지나치게 이뤄져서 아픈 아이들이 많다고 해요. 혹시 반려묘와 함께 하는 걸 고민하고 계시다면, 인기 품종을 사는 것보다는 입양을 고려해보시는 건 어떤가요? 무엇보다 중요한 건 마음이잖아요!";
     							break;
 							case "sib":
 							resultimg = '<img src="sib.jpg"></img>';
-    							resultMessege = "당신은 시베리안 고양이입니다! 새하얀 설원에서 마치 야생마처럼 뛰어다니는 고양이의 모습을 접한 적이 있다면 그건 이 품종일 가능성이 높아요. 추운 환경에 적응해 살아남은 만큼 커다란 골격에 근육질인 걸로 유명하죠. 지금까지 살면서 길거리에서 시비가 걸려오거나 남들에게 하대 받은 기억이 딱히 없다고요? AI가 당신에게 어울리는 품종을 찾는 데 성공했군요! <br> <br> 러시아에서는 쥐를 잡으려는 목적으로도 많이 키웠을 만큼 지능이 높기도 해요. 당신의 우월한 신체와 지적 능력을 활용할 기회를 기다리고 있나요? 근처 유기 동물 보호소에서 할 수 있는 봉사활동을 찾아보는 건 어떤가요!"
+    							resultMessege = "당신은 시베리안 고양이입니다! 새하얀 설원에서 마치 야생마처럼 뛰어다니는 고양이의 모습을 접한 적이 있다면 그건 이 품종일 가능성이 높아요. 추운 환경에 적응해 살아남은 만큼 커다란 골격에 근육질인 걸로 유명하죠. 지금까지 살면서 길거리에서 시비가 걸려오거나 남들에게 하대 받은 기억이 딱히 없다고요? AI가 당신에게 어울리는 품종을 찾는 데 성공했군요! <br> <br> 러시아에서는 쥐를 잡으려는 목적으로도 많이 키웠을 만큼 지능이 높기도 해요. 당신의 우월한 신체와 지적 능력을 활용할 기회를 기다리고 있나요? 근처 유기 동물 보호소에서 할 수 있는 봉사활동을 찾아보는 건 어떤가요!";
     							break;
   							case "siam":
 							resultimg = '<img src="siam.jpg"></img>';
-    							resultMessege = "당신은 태국의 자연종 샴 고양이를 닮았군요! 부드러운 크림색 털로 덮여 있는 몸과 짙은 색의 얼굴이 대비를 이뤄 신비로운 매력을 발산하는 품종이죠. 거기에 영롱하게 빛나는 사파이어 색 눈까지 더해져서 아름다움은 완성! 당신 주변에도 당신의 형용할 수 없는 매력에 빠졌지만 선뜻 다가설 수가 없어 속으로만 애태우는 짝사랑러들이 꽤나 있겠는데요? <br> <br> 베일에 쌓여 있는 듯한 첫 인상과 달리 사실은 활동적인 성격으로 개냥이의 대표주자라는 샴 고양이! 사람이 말을 걸면 곧잘 울면서 대답해주는 수다쟁이로도 잘 알려져 있죠. 당신도 인연을 멀리서만 찾지 말고 주변을 잘 살펴서 짝사랑러에게 먼저 친절하게 말을 걸어보아요. 반전 매력에 더 푹 빠져버린 상대방이 드디어 고백을 할 줄 누가 아나요!"
+    							resultMessege = "당신은 태국의 자연종 샴 고양이를 닮았군요! 부드러운 크림색 털로 덮여 있는 몸과 짙은 색의 얼굴이 대비를 이뤄 신비로운 매력을 발산하는 품종이죠. 거기에 영롱하게 빛나는 사파이어 색 눈까지 더해져서 아름다움은 완성! 당신 주변에도 당신의 형용할 수 없는 매력에 빠졌지만 선뜻 다가설 수가 없어 속으로만 애태우는 짝사랑러들이 꽤나 있겠는데요? <br> <br> 베일에 쌓여 있는 듯한 첫 인상과 달리 사실은 활동적인 성격으로 개냥이의 대표주자라는 샴 고양이! 사람이 말을 걸면 곧잘 울면서 대답해주는 수다쟁이로도 잘 알려져 있죠. 당신도 인연을 멀리서만 찾지 말고 주변을 잘 살펴서 짝사랑러에게 먼저 친절하게 말을 걸어보아요. 반전 매력에 더 푹 빠져버린 상대방이 드디어 고백을 할 줄 누가 아나요!";
     							break;
 							case "ti":
 							resultimg = '<img src="ti.jpg"></img>';
-    							resultMessege = "이런! AI가 당신을 호랑이로 인식했군요! 이런 결과가 산출될 가능성은 극히 적은 걸로 판단했는데, 당신은 도대체... <br> <br> 호랑이는 현존하는 고양잇과 포유류 중 가장 크고 용맹한 걸로 잘 알려져 있죠. 하지만 고양이라고 해서 방심하지 마세요! 길거리에서 마주친 호랑이와 함부로 사냥 놀이를 하다간 정말로 사냥을 당할 수도 있답니다!"
+    							resultMessege = "이런! AI가 당신을 호랑이로 인식했군요! 이런 결과가 산출될 가능성은 극히 적은 걸로 판단했는데, 당신은 도대체... <br> <br> 호랑이는 현존하는 고양잇과 포유류 중 가장 크고 용맹한 걸로 잘 알려져 있죠. 하지만 고양이라고 해서 방심하지 마세요! 길거리에서 마주친 호랑이와 함부로 사냥 놀이를 하다간 정말로 사냥을 당할 수도 있답니다!";
 								break;
 							case "tur":
 							resultimg = '<img src="tur.jpg"></img>';
-    							resultMessege = "당신은 터키시 앙고라를 닮았네요! 새하얀 긴 털과 늘씬한 몸매로 우아한 분위기를 자아내는 품종이죠. 오드아이일 가능성도 많아 중세 시대 유럽 귀족들의 사랑을 독차지했다고 해요! 당신도 함부로 다가서기 힘들지만 계속해서 쳐다보게 되는 묘한 매력을 가졌겠네요. 화려한 명품을 걸치는 대신 하얀 티셔츠만 입어도 고급스러운 분위기를 자아내는 당신! 패완얼이라는 말은 당신 때문에 나온 게 아닐까요? <br> <br> 고양이 중에서도 영리한 걸로 소문난 터키시 앙고라처럼 새로운 지식을 쌓는 데도 관심이 많은 당신! 매일 같은 시간에 길에서 마주치는 그 고양이는 어떤 간식을 좋아하는 지 탐구해보는 건 어떨까요? 아름답고 똑똑한 당신이라면 금세 알아낼 수 있을 거예요!"
+    							resultMessege = "당신은 터키시 앙고라를 닮았네요! 새하얀 긴 털과 늘씬한 몸매로 우아한 분위기를 자아내는 품종이죠. 오드아이일 가능성도 많아 중세 시대 유럽 귀족들의 사랑을 독차지했다고 해요! 당신도 함부로 다가서기 힘들지만 계속해서 쳐다보게 되는 묘한 매력을 가졌겠네요. 화려한 명품을 걸치는 대신 하얀 티셔츠만 입어도 고급스러운 분위기를 자아내는 당신! 패완얼이라는 말은 당신 때문에 나온 게 아닐까요? <br> <br> 고양이 중에서도 영리한 걸로 소문난 터키시 앙고라처럼 새로운 지식을 쌓는 데도 관심이 많은 당신! 매일 같은 시간에 길에서 마주치는 그 고양이는 어떤 간식을 좋아하는 지 탐구해보는 건 어떨까요? 아름답고 똑똑한 당신이라면 금세 알아낼 수 있을 거예요!";
 								break;
 							default:
 								image = '<img src="#!"></img>';
