--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
 			
 		<div class="file-upload-content">
             <img class="file-upload-image" id="face-image" src="#" alt="your image" />
-	<img src="beng.jpg" id="bengi" style="display:none"/>
-	<img src="brits.jpg" id="britsi" style="display:none"/>
-	<img src="ko.jpg" id="koi" style="display:none"/>
-	<img src="per.jpg" id="peri" style="display:none"/>
-	<img src="scot.jpg" id="scoti" style="display:none"/>
-	<img src="sib.jpg" id="sibi" style="display:none"/>
-	<img src="siam.jpg" id="siami" style="display:none"/>
-	<img src="ti.jpg" id="tii" style="display:none"/>
-	<img src="tur.jpg" id="turi" style="display:none"/>
+	<img class= "resultimg" src="beng.jpg" id="bengi" style="display:none"/>
+	<img class= "resultimg" src="brits.jpg" id="britsi" style="display:none"/>
+	<img class= "resultimg" src="ko.jpg" id="koi" style="display:none"/>
+	<img class= "resultimg" src="per.jpg" id="peri" style="display:none"/>
+	<img class= "resultimg" src="scot.jpg" id="scoti" style="display:none"/>
+	<img class= "resultimg" src="sib.jpg" id="sibi" style="display:none"/>
+	<img class= "resultimg" src="siam.jpg" id="siami" style="display:none"/>
+	<img class= "resultimg" src="ti.jpg" id="tii" style="display:none"/>
+	<img class= "resultimg" src="tur.jpg" id="turi" style="display:none"/>
 				
             <div id="loading" class="animated bounce">
                 <div class="spinner-border" role="status">
