--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                 $('.file-upload-input').replaceWith($('.file-upload-input').clone());
                 $('.file-upload-content').hide();
 				$('.image-upload-wrap').show();
+		$('.resultimg').hide();    
             }
             $('.image-upload-wrap').bind('dragover', function () {
                 $('.image-upload-wrap').addClass('image-dropping');
@@ -229,7 +230,7 @@
     							resultMessege = "당신은 터키시 앙고라를 닮았네요! 새하얀 긴 털과 늘씬한 몸매로 우아한 분위기를 자아내는 품종이죠. 오드아이일 가능성도 많아 중세 시대 유럽 귀족들의 사랑을 독차지했다고 해요! 당신도 함부로 다가서기 힘들지만 계속해서 쳐다보게 되는 묘한 매력을 가졌겠네요. 화려한 명품을 걸치는 대신 하얀 티셔츠만 입어도 고급스러운 분위기를 자아내는 당신! 패완얼이라는 말은 당신 때문에 나온 게 아닐까요? <br> <br> 고양이 중에서도 영리한 걸로 소문난 터키시 앙고라처럼 새로운 지식을 쌓는 데도 관심이 많은 당신! 매일 같은 시간에 길에서 마주치는 그 고양이는 어떤 간식을 좋아하는 지 탐구해보는 건 어떨까요? 아름답고 똑똑한 당신이라면 금세 알아낼 수 있을 거예요!";
 								break;
 							default:
-								resultMessege = "알 수 없음";
+								resultMessege = "이목구비가 정확하게 나온 사진으로 다시 시도해주세요!";
 						}
 						
 						
