--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
                 $('.file-upload-input').replaceWith($('.file-upload-input').clone());
                 $('.file-upload-content').hide();
 				$('.image-upload-wrap').show();
-		$('.resultimg').hide();    
+		$('.resultimg').hide();
+		$('.result-message').hide();    
             }
             $('.image-upload-wrap').bind('dragover', function () {
                 $('.image-upload-wrap').addClass('image-dropping');
