--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
  data-ad-height  = "100"></ins> 
 <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
         </div>
+	    
+	<div id="copyment" class="copyright">
+                <p class="text-center"> ⓒ 2021. 우주공작소 All Rights Reserved. </p>
+        </div>
 		<!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
