--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
 	    
 	<div id="copyment" class="copyright">
-                <p class="text-center"> ⓒ 2021. 우주공작소 All Rights Reserved. </p>
+                <p class="text-center"> ⓒ 2021. 우주스페이스 All Rights Reserved. </p>
         </div>
 		<!-- Optional JavaScript; choose one of the two! -->
 
